# OpenSteamworks

./: .gitignore  .gitmodules  Directory.Build.props  OSW_PROJECT_ROOT  OpenSteamworks.sln  README.md  nuget.sh  package-osw.sh
CppSourceGen.Generator/: AttributeInfo.cs  BuilderBase.cs  BuilderTypeInfo.cs  CLRTypeInfo.cs  ClassBuilder.cs  CppClassImplSourceGenerator.cs  CppClassSourceGenerator.cs  CppSourceGen.Generator.csproj  Directory.Build.props  FunctionInfo.cs  MemberInfo.cs  NativeClassSourceGenerator.cs  NativeCppClass.cs  NativeCppClassImpl.cs  NativeMarshalGenerator.cs  RoslynTypeInfo.cs  StringExtensions.cs  StructBuilder.cs  ThinTypeInfo.cs  TypeInfo.cs  VarOrArgInfo.cs
OSWTest/: OSWTest.csproj  Program.cs  nuget.config
OpenSteamworks.ConCommands/: ConCommandBase.cs  ConCommandHandler.cs  ConsoleNative.cs  ManagedConCommand.cs  OpenSteamworks.ConCommands.csproj
OpenSteamworks.Data/: AppPlaytime_t.cs  CUtlBuffer.cs  CUtlMap.cs  CUtlMemory.cs  CUtlRBTree.cs  CUtlString.cs  CUtlVector.cs  JobID.cs  OpenSteamworks.Data.csproj  README.md  RTime32.cs  SteamAPICallGeneric_t.cs  UtlLogging.cs  interop.typedef  steamtypes.typedef  typedefs.typedef
OpenSteamworks.DataSourceGen/: StructGenerator.cs
OpenSteamworks.IPC/: FunctionDeserializer.cs  FunctionSerializer.cs  IPCClient.cs  IPCSteamClient.cs  IPCSteamClientCreateOptions.cs  IPCSteamClientEngine.cs  InterfaceMap.cs  OpenSteamworks.IPC.csproj  SteamClientBuilderIPC.cs  nuget.config
OpenSteamworks.Messaging.SharedConnection/: README.md  (+2 more)
cpp/: CMakeLists.txt
cpp/include/: miniutl.h  winlite.h
cpp/include/minbase/: minbase_annotations.h  minbase_decls.h  minbase_endian.h  minbase_identify.h  minbase_securezeromemory_impl.h  minbase_types.h
cpp/include/steam/: gameid.h  ipaddr.h  steam_api_common.h  steamclientpublic.h  steamdatagram_tickets.h  steamenums.h  steamid.h  steamnetworkingtypes.h  steamtypes.h  steamuniverse.h
cpp/include/steamclient/: IClientAppDisableUpdate.h  IClientAppManager.h  IClientApps.h  IClientAudio.h  IClientBilling.h  IClientCompat.h  IClientConfigStore.h  IClientControllerSerialized.h  IClientDepotBuilder.h  IClientDeviceAuth.h  IClientEngine.h  IClientFriends.h  IClientGameCoordinator.h  IClientGameNotifications.h  IClientGameSearch.h  IClientGameServerInternal.h  IClientGameServerPacketHandler.h  IClientGameServerStats.h  IClientGameStats.h  IClientHTMLSurface.h  IClientHTTP.h  IClientInstallUtils.h  IClientInventory.h  IClientMatchmaking.h  IClientModuleManager.h  IClientMusic.h  IClientNetworkDeviceManager.h  IClientNetworking.h  IClientNetworkingMessages.h  IClientNetworkingSockets.h  IClientNetworkingSocketsSerialized.h  IClientNetworkingUtils.h  IClientNetworkingUtilsSerialized.h  IClientParentalSettings.h  IClientParties.h  IClientProcessMonitor.h  IClientProductBuilder.h  IClientRemoteClientManager.h  IClientRemotePlay.h  IClientRemoteStorage.h  (+24 more)
cpp/include/tier0/: basetypes.h  dbg.h  memdbgon.h  platform.h  platform_sockets.h  t0constants.h  validator.h  valve_tracelogging.h  vprof.h
cpp/include/tier1/: bitstring.h  cvar.h  minbase_endian.h  miniutl.h  netadr.h  random.h  strtools.h  utlbuffer.h  utlhashmap.h  utlmemory.h  utlpriorityqueue.h  utlvector.h
cpp/src/tier0/: dbg.cpp  platform.cpp
cpp/src/tier1/: bitstring.cpp  cvar.cpp  generichash.cpp  netadr.cpp  strtools.cpp  utlbuffer.cpp  utlmemory.cpp  utlstring.cpp
(+646 files in other folders)
